exampleof_toleration.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "taintpod"
spec:
  tolerations:
    - key: "key"
      operator: "Equal"
      value: "value"
      effect: "NoSchedule"     # key=value:NoSchedule
  containers:
    - name: "taintcontainer"
      image: nginx:alpine
      ports:
        - containerPort: 80
