simple_pod_for_taint_testing.yaml
apiVersion: v1 
kind: Pod 
metadata: 
  name: "taintpod" 
spec: 
 containers:
   - name: "taintcontainer"
     image: nginx:alpine 
     ports: 
     - containerPort: 80
