adityajaiswalnodeprojectonkubernetes.yaml
# first deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firstdeployment
  namespace: ingress-nginx 
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodeapp
  template:
    metadata:
      labels:
        app: nodeapp
    spec:
      containers:
        - name: firstcontainer
          image: amitkumar0441/adityajaiswalnodeproject:7
          ports:
            - containerPort: 8081

# first service
---
apiVersion: v1
kind: Service
metadata:
  name: firstservice
spec:
  selector:
    app: nodeapp  # Fixed indentation issue
  ports:
    - protocol: TCP
      port: 8081       # Service port
      targetPort: 8081 # Container port
      nodePort: 30053  # NodePort for external access
  type: NodePort
