deployment.yaml
# Deployment for multiple replicas and rolling update
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seconddeployment  # Fixed name
  namespace: ingress-nginx 
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dockerwebapp 
  template:
    metadata: 
      name: "secondpod"
      labels:
        app: dockerwebapp
    spec:
      containers:
        - name: firstcontainer
          image: amitkumar0441/dockerwebapp:latest
          ports:
            - containerPort: 80

---
apiVersion: v1 
kind: Service 
metadata: 
  name: secondservice
spec: 
  selector:
    app: dockerwebapp  # Fixed mismatch with Deployment
  ports:
    - protocol: TCP
      port: 8082         # Service port
      targetPort: 8082   # Container port
      nodePort: 30054   # NodePort for external access
  type: NodePort
