statefulsets_with_secret.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: statefulsetswithsecrets
  namespace: default
spec:
  selector:
    matchLabels:
      app: mysql
  serviceName: mycustomservice
  replicas: 2
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysqlcontainer
        image: mysql:8.0  
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mycustomvolume
          mountPath: /var/lib/mysql
      restartPolicy: Always  # Ensures the pod restarts if it crashes
  volumeClaimTemplates:
  - metadata:
      name: mycustomvolume
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi

---
apiVersion: v1
kind: Service
metadata:
  name: mycustomservice
  namespace: default
spec:
  clusterIP: None  # Headless service
  selector:
    app: mysql
  ports:
  - name: mysql
    port: 3306
    targetPort: 3306
