ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: myapp.local
    http:
      paths:
      - path: /nodeapp
        pathType: Prefix
        backend:
          service:
            name: firstservice  # No need to specify namespace as it's in the same namespace
            port:
              number: 80
      - path: /dockerwebapp
        pathType: Prefix
        backend:
          service:
            name: secondservice  # No need to specify namespace as it's in the same namespace
            port:
              number: 80
